<resources>
    <string name="app_name">Fancy Text Generator</string>
    <string name="replace">Replace Text</string>
    <string name="search">Search Text</string>
    <string name="count">Count Text</string>
    <string name="clone">Clone Text</string>
    <string name="stylish_text">Fancy Text</string>
    <string name="mark">Mark Text</string>
    <string name="please_wait">Please wait..</string>
    <string name="clone_limit">Clone Limit</string>
    <string name="enter_input">Enter Input</string>
    <string name="enter_input_data">Enter Input Data</string>
    <string name="output">Output</string>
    <string name="output_section">Output Section</string>
    <string name="copy_output">Copy Output</string>
    <string name="share_output">Share Output</string>
    <string name="appLink" translatable="false">https://play.google.com/store/apps/details?id=com.stylish.fancy.text.generator</string>
    <string name="privacy_policy_link" translatable="false">https://sites.google.com/view/ventureftgprivacypolicy</string>
    <string name="clone_text_btn">Clone Text</string>
    <string name="count_text">Count Text</string>
    <string name="count_text_btn">Count Text</string>
    <string name="remove_spaces_cb">Remove Spaces</string>
    <string name="count_with_spaces_cb">Count With Spaces</string>
    <string name="reverse_text_cb">Reverse Text</string>
    <string name="home_title">Home</string>
    <string name="total_letter">Total Letter</string>
    <string name="total_word">Total Word</string>
    <string name="find_text">Find Text</string>
    <string name="replace_with">Replace With</string>
    <string name="search_for">Search For</string>
    <string name="text_to_emoji">Text To Emoji</string>
</resources>