<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color"
        android:orientation="vertical"
        tools:context=".activities.CountTextActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gray_border"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgClone"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:src="@drawable/ic_text_fields"
                            app:tint="@color/colorTint" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/grey_1" />

                        <EditText
                            android:id="@+id/edtInput"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/enter_input"
                            android:maxLength="500"
                            android:maxLines="3" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvCountText"
                        style="@style/ButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/button_bg_shape"
                        android:elevation="2dp"
                        android:text="@string/count_text_btn" />

                    <CheckBox
                        android:id="@+id/cbReverseText"
                        style="@style/TextViewMediumNormalBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:buttonTint="@color/bottom_nav_tint"
                        android:text="@string/reverse_text_cb" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        style="@style/TextViewMediumNormalBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/bottom_nav_tint"
                        android:text="@string/count_with_spaces_cb" />

                    <CheckBox
                        android:id="@+id/cbCountWithSpaces"
                        style="@style/TextViewMediumNormalBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_spaces_cb" />

                    <LinearLayout
                        android:id="@+id/outputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/gray_border"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            style="@style/TextViewMediumNormalBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Preview"
                            android:textAlignment="center" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_1" />

                        <TextView
                            android:id="@+id/tvReverseText"
                            style="@style/TextViewMediumBlackBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Reverse Text: "
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/tvOutput"
                            style="@style/TextViewMediumBlackBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Output"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/tvTotalWords"
                            style="@style/TextViewMediumBlackBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Total Words: " />

                        <TextView
                            android:id="@+id/tvTotalLetters"
                            style="@style/TextViewMediumBlackBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Total Letters: " />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</layout>