<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:orientation="vertical"
    tools:context=".activities.CloneTextActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/edittext_header_bg"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextViewMediumNormalBlack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_solid_main_color_bg"
                            android:text="@string/enter_input_data"
                            android:textAlignment="center" />

                        <EditText
                            android:id="@+id/edtInput"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_input"
                            android:maxLength="500"
                            android:minLines="5" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp"
                    app:cardMaxElevation="8dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border_solid_main_color_bg"
                            android:orientation="vertical">

                            <TextView
                                style="@style/TextViewMediumNormalBlack"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/clone_limit"
                                android:textAlignment="center" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/edittext_header_bg"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/edtCloneLimit"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/clone_limit"
                                android:imeOptions="actionDone"
                                android:inputType="number"
                                android:maxLength="3" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvCloneText"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:text="Clone Text" />

                <LinearLayout
                    android:id="@+id/outputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="1"
                            android:gravity="center">

                            <LinearLayout
                                android:id="@+id/shareLayout"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:background="@drawable/ripple_effect"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_marginEnd="10dp"
                                    android:src="@drawable/ic_share"
                                    app:tint="@color/colorTint" />

                                <TextView
                                    style="@style/TextViewMediumNormalBlack"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/share_output" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            android:layout_weight="1"
                            android:gravity="center">

                            <LinearLayout
                                android:id="@+id/copyLayout"
                                android:layout_width="0dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:background="@drawable/ripple_effect"
                                android:gravity="center"
                                tools:ignore="NestedWeights">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_marginEnd="10dp"
                                    android:src="@drawable/ic_copy"
                                    app:tint="@color/colorTint" />

                                <TextView
                                    style="@style/TextViewMediumNormalBlack"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/copy_output" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:elevation="8dp"
                            app:cardCornerRadius="8dp"
                            app:cardElevation="8dp"
                            app:cardMaxElevation="8dp"
                            app:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/border_solid_main_color_bg"
                                    android:orientation="vertical">

                                    <TextView
                                        style="@style/TextViewMediumNormalBlack"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/output_section"
                                        android:textAlignment="center" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/edittext_header_bg"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/tvOutput"
                                        style="@style/TextViewMediumBlackBold"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/border"
                                        android:text="@string/output" />

                                </LinearLayout>

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>