<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color"
        android:orientation="vertical"
        tools:context=".activities.MarkTextActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gray_border"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgClone"
                            android:layout_width="55dp"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:src="@drawable/ic_text_fields"
                            app:tint="@color/colorTint" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/grey_1" />

                        <EditText
                            android:id="@+id/edtInput"
                            style="@style/EditTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/enter_input"
                            android:maxLines="5" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2.5"
                            android:background="@drawable/gray_border"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="55dp"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="Word"
                                android:textColor="@color/black" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/grey_1" />

                            <EditText
                                android:id="@+id/edtTotalWord"
                                style="@style/EditTextStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/total_word"
                                android:imeOptions="actionDone"
                                android:inputType="number"
                                android:maxLength="10" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvnMarkText"
                            style="@style/ButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight=".5"
                            android:background="@drawable/button_bg_shape"
                            android:elevation="2dp"
                            android:text="@string/mark" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/outputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/gray_border"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="4">

                            <TextView
                                style="@style/TextViewMediumNormalBlack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:text="Preview"
                                android:textAlignment="center" />

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/grey_1" />

                            <LinearLayout
                                android:id="@+id/shareLayout"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="?android:attr/selectableItemBackground"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_share"
                                    app:tint="@color/colorTint" />

                            </LinearLayout>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/grey_1" />

                            <LinearLayout
                                android:id="@+id/copyLayout"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="?android:attr/selectableItemBackground"
                                android:gravity="center"
                                tools:ignore="NestedWeights">

                                <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:src="@drawable/ic_copy"
                                    app:tint="@color/colorTint" />

                            </LinearLayout>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_1" />

                        <TextView
                            android:id="@+id/tvOutput"
                            style="@style/TextViewMediumBlackBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/output" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/noOutput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/img_empty"
                            app:tint="@color/colorTint" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="No Output"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</layout>